# Autonomous-Drone-Inspection-with-DRL

./: .gitignore  README.md  call_py2.py  call_robot.py  callback_buffer.py  env.yaml  eval.py  robotEnv.py  ros_core.sh  ros_run_dummy.sh  ros_setup.sh  setup_ros.sh  training.py
arpl_ws/src/call_robot/: CMakeLists.txt  package.xml
arpl_ws/src/call_robot/scripts/: call_robot_srv.py  utils.py
arpl_ws/src/call_robot/srv/: CallRobot.srv
arpl_ws/src/darknet_ros/: README.md
arpl_ws/src/darknet_ros/darknet_ros/: CMakeLists.txt  README.md  package.xml
arpl_ws/src/darknet_ros/darknet_ros/config/: drone.yaml  ros.yaml  yolov3.yaml
arpl_ws/src/darknet_ros/darknet_ros/include/: yolo_detector.h
arpl_ws/src/darknet_ros/darknet_ros/launch/: darknet_ros.launch
arpl_ws/src/darknet_ros/darknet_ros/src/: .yolo_detector.cpp.swp  darknet.c  image.c  yolo_detector.cpp  yolo_detector_node.cpp
arpl_ws/src/darknet_ros/darknet_ros/yolo_network_config/cfg/: drone-tiny.cfg  drone.cfg  drone_high_reso.cfg
arpl_ws/src/motion_capture_system/mocap_vicon/launch/: vicon.launch
arpl_ws/src/multimaster_fkie/fkie_master_sync/launch/: master_sync_drl.launch
arpl_ws/src/py_image_processor/: CMakeLists.txt  README.md  package.xml  setup.py
arpl_ws/src/py_image_processor/scripts/: .image_processor.py.swp  image_processor.py  processor.py
arpl_ws/src/system_launch/: CMakeLists.txt  README.md  package.xml
arpl_ws/src/system_launch/bash_file/: aau_experiment.bash  record.bash
arpl_ws/src/system_launch/bash_file/copr-transportation/: copr-experiments.bash  emergency_stop.sh  launch_all.bash  motors_on_all.bash
arpl_ws/src/system_launch/config/: QuadrotorQ2_gains.yaml  dfs_test.yaml  mav_manager_params.yaml  payload_gains.yaml  pl_trackers.yaml  stereo.yaml  tracker_params.yaml
arpl_ws/src/system_launch/config/copr-transportation/: mav_manager_params.yaml  payload_gains.yaml
arpl_ws/src/system_launch/config/copr-transportation/dragonfly2/: robot_payload_gains.yaml
arpl_ws/src/system_launch/config/copr-transportation/dragonfly3/: robot_payload_gains.yaml
arpl_ws/src/system_launch/config/copr-transportation/dragonfly6/: robot_payload_gains.yaml
arpl_ws/src/system_launch/config/rqt/: StereoCalibrate.perspective
arpl_ws/src/system_launch/launch/: aautraj_state_control.launch  adi_state_control.launch  disp_nodelet.launch  laptoptest_pl_robot_state_control.launch  pl_robot_state_control.launch  pl_station_master_sync.launch  pl_station_state_control.launch  snav_tf_pub.launch  snav_traj_replanning.launch  state_control.launch  state_control_use_qualcomm_control.launch  state_control_use_snapvio.launch
gym-ADI/: README.md  setup.py
gym-ADI/gym_ADI/: __init__.py
gym-ADI/gym_ADI/envs/: ADIEnv.py  __init__.py
(+1 files in other folders)
